[metadata]
name = learn-flask
version = 1.0.0
url = https://example.com/
license = MIT
maintainer = Ankush
maintainer_email = example@email.com
description = The flask project structure
long_description = file: README.md
long_description_content_type = text/markdown

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = apps
